tests/fixtures/invalid/pow_bytes_str.py
# Cannot call pow() with Bytes, Str
x = pow(b"hello", "hello")
